# VachaSpeech

./: README.md  pyproject.toml  requirements.txt
codec/: __init__.py
codec/module/: fsq.py  ssl_extractor.py
model/: text_normalizer.py  vachaspeech.py
vachaspeech/: __init__.py  tts.py
vachaspeech/codec/: model.py  util.py
vachaspeech/codec/module/: istft_head.py  transformer.py
